[package]
name = "mobec"
version = "0.1.0"
authors = ["Cobrand <cobrandw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.6"

generational-arena = { version = "^0.2.6" }
hibitset = { version = "^0.6", default-features = false }

tuple_utils = "0.3"

serde = { version = "^1", optional = true, default-features = false}

[dev-dependencies]
criterion = "0.3"
bincode = "^1.2"
serde = { version = "^1", default-features = false, features = ["derive"]}

[features]
default = []
use_serde = ["serde", "generational-arena/serde"]

[[bench]]
name = "iter"
harness = false

[[bench]]
name = "reconstruct"
harness = false

[profile.release]
# EXTREMELY IMPORTANT: REMOVE THIS LINE FOR TRUE RELEASES
# only used for flamegraphs
# debug = true