[package]
name = "mobec"
version = "0.1.0"
authors = ["Cobrand <cobrandw@gmail.com>"]
edition = "2018"

description = """
MobEC: a simple Entity Component library, leaving the system part up to you.
"""
readme = "README.md"
keywords = ["gamedev", "ecs", "entity", "component"]
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.8.0"

generational-arena = "0.2.8"
hibitset = { version = "0.6.3", default-features = false }

tuple_utils = "0.3.0"

serde = { version = "1.0.114", optional = true, default-features = false }

[dev-dependencies]
criterion = "0.3.3"
bincode = "1.3.1"
serde = { version = "1.0.114", default-features = false, features = ["derive"] }

[features]
default = []
use_serde = ["serde", "generational-arena/serde"]

[[bench]]
name = "iter"
harness = false

[[bench]]
name = "reconstruct"
harness = false

[package.metadata.docs.rs]
features = "use_serde"

[profile.release]
# EXTREMELY IMPORTANT: REMOVE THIS LINE FOR TRUE RELEASES
# only used for flamegraphs
# debug = true